kubernetes/router/apps/observability/kube-prometheus-stack/app/configs/httproutes.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus-app
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: private-gateway
    namespace: istio-gateways
  hostnames:
  - "prometheus.${CLUSTER_DOMAIN}"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - group: ''
      kind: Service
      name: kube-prometheus-stack-prometheus
      port: 9090
      weight: 100
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: alertmanager-app
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: private-gateway
    namespace: istio-gateways
  hostnames:
  - "alertmanager.${CLUSTER_DOMAIN}"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - group: ''
      kind: Service
      name: kube-prometheus-stack-alertmanager
      port: 9093
      weight: 100
